Add mouse and keyboard support for tvOS
Extended mouse callback registration to tvOS 14.0+ in ControllerSupport.m and enabled GCSupportsMouseAndKeyboard in the Moonlight TV Info.plist. Updated Bluetooth usage descriptions to reference Bluetooth mice instead of Citrix X1 mice.

--- a/Moonlight TV/Info.plist
+++ b/Moonlight TV/Info.plist
@@ -27,6 +27,8 @@
 			<string>ExtendedGamepad</string>
 		</dict>
 	</array>
+	<key>GCSupportsMouseAndKeyboard</key>
+	<true/>
 	<key>GCSupportsControllerUserInteraction</key>
 	<true/>
 	<key>ITSAppUsesNonExemptEncryption</key>
@@ -39,9 +41,9 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Bluetooth access allows Moonlight to connect to Citrix X1 mice.</string>
+	<string>Bluetooth access allows Moonlight to connect to Bluetooth mice.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>Bluetooth access allows Moonlight to connect to Citrix X1 mice.</string>
+	<string>Bluetooth access allows Moonlight to connect to Bluetooth mice.</string>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_nvstream._tcp</string>
